[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameSaveRelated/GUIs/GameStatsRelated/Subs/GSM_PerLevel_Panel/Assets/GSM_PerLevel_Panel__Separator.png" type="Texture" id=2]
[ext_resource path="res://GameSaveRelated/GUIs/GameStatsRelated/Subs/GSM_PerGame_SpecificGStats_ListPanel/GSM_PerGame_SpecificGStats_ListPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/FontRelated/FontRes/monogram_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://GameSaveRelated/GUIs/GameStatsRelated/Subs/GSM_PerLevel_Panel/GSM_PerLevel_Panel.gd" type="Script" id=5]
[ext_resource path="res://MiscRelated/TooltipRelated/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=6]

[node name="GSM_PerLevel_Panel" type="MarginContainer"]
margin_right = 521.0
margin_bottom = 241.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 521.0
margin_bottom = 335.0
custom_constants/separation = 30

[node name="LevelDetailsPanel" type="MarginContainer" parent="VBoxContainer"]
margin_right = 521.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LevelDetailsPanel"]
margin_right = 521.0

[node name="LevelNameTooltipBody" parent="VBoxContainer/LevelDetailsPanel/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 521.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
bbcode_align_mode = 1

[node name="MiscDetails" type="MarginContainer" parent="VBoxContainer"]
margin_left = 135.0
margin_top = 30.0
margin_right = 385.0
margin_bottom = 64.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MiscDetails"]
margin_right = 250.0
margin_bottom = 34.0

[node name="HBoxAttempt" type="HBoxContainer" parent="VBoxContainer/MiscDetails/VBoxContainer"]
margin_right = 250.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="VBoxContainer/MiscDetails/VBoxContainer/HBoxAttempt"]
margin_right = 126.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Attempt Count:"

[node name="AttemptCountValLabel" type="Label" parent="VBoxContainer/MiscDetails/VBoxContainer/HBoxAttempt"]
margin_left = 223.0
margin_right = 250.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "xxx"

[node name="HBoxRestartOrQuit" type="HBoxContainer" parent="VBoxContainer/MiscDetails/VBoxContainer"]
margin_top = 19.0
margin_right = 250.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="VBoxContainer/MiscDetails/VBoxContainer/HBoxRestartOrQuit"]
margin_right = 189.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Restart & Quit Count:"

[node name="RestartOrQuitCountValLabel" type="Label" parent="VBoxContainer/MiscDetails/VBoxContainer/HBoxRestartOrQuit"]
margin_left = 223.0
margin_right = 250.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "xxx"

[node name="GameSpecificStatsHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 521.0
margin_bottom = 335.0
custom_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/GameSpecificStatsHBox"]
margin_top = 86.0
margin_right = 132.0
margin_bottom = 154.0
size_flags_vertical = 6
custom_constants/separation = 20

[node name="Button_RecentHistory" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 60.0
margin_right = 132.0
margin_bottom = 24.0
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="TextureButton" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_RecentHistory" index="0"]
margin_right = 72.0
margin_bottom = 24.0

[node name="LabelContainer" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_RecentHistory" index="1"]
margin_right = 72.0
margin_bottom = 24.0

[node name="Label" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_RecentHistory/LabelContainer" index="0"]
margin_right = 72.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Recent"

[node name="Button_HighScores" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 44.0
margin_right = 132.0
margin_bottom = 68.0
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="TextureButton" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_HighScores" index="0"]
margin_right = 132.0
margin_bottom = 24.0

[node name="LabelContainer" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_HighScores" index="1"]
margin_right = 132.0
margin_bottom = 24.0

[node name="Label" parent="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_HighScores/LabelContainer" index="0"]
margin_right = 132.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "High Scores"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/GameSpecificStatsHBox"]
margin_left = 162.0
margin_right = 167.0
margin_bottom = 241.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="GSM_PerGame_ListPanel" parent="VBoxContainer/GameSpecificStatsHBox" instance=ExtResource( 3 )]
margin_left = 197.0
margin_right = 521.0
margin_bottom = 241.0
size_flags_vertical = 6

[connection signal="button_pressed" from="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_RecentHistory" to="." method="_on_Button_RecentHistory_button_pressed"]
[connection signal="button_pressed" from="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_HighScores" to="." method="_on_Button_HighScores_button_pressed"]

[editable path="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_RecentHistory"]
[editable path="VBoxContainer/GameSpecificStatsHBox/VBoxContainer/Button_HighScores"]
